# 2cemestrforlabC-

./: CMakeLists.txt  README.md  get_points.cpp  get_points.h  main.cpp  point_generation.cpp  visualization.py
classes/: Dataset.cpp  Dataset.h  Matrix.cpp  Matrix.h  Point.cpp  Point.h
my_part_classes/: Dataset.h  Matrix.cpp  Matrix.h  Point.h
